--- a/src/intro_v5.html
+++ b/src/intro_v5.html
@@ -3,11 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<link rel="stylesheet" href="http://class2.hujiang.com/app/css/base-font-reset.css">
+	<link rel="stylesheet" href="/build/css/intro_v5.css">
 </head>
 <body>
-	<div class="C-header">
-		<div class="class-info-box">
-			 
+	<div class="class-header">
+		<div class="class-info">
+			 <div class="page-breadcrumb">
+			 	<a href="">选课中心</a>
+			 	<a href="">英语</a>
+			 	<a href="">商务英语</a>
+			 </div>
+			 <h2 class="class-title">延世韩国语1-6册连读【3月班】</h2>
+			 <p class="class-desc">采用最新权威教材，学练结合高效掌握，零基础开启韩语学霸模式。</p>
 		</div>
 	</div>
 </body>
