完成头部课程信息板块

--- a/src/intro_v5.html
+++ b/src/intro_v5.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div class="class-header">
+		<div class="header-bg"></div>
 		<div class="class-info">
 			 <div class="page-breadcrumb">
 			 	<a href="">选课中心</a>
@@ -16,6 +17,36 @@
 			 </div>
 			 <h2 class="class-title">延世韩国语1-6册连读【3月班】</h2>
 			 <p class="class-desc">采用最新权威教材，学练结合高效掌握，零基础开启韩语学霸模式。</p>
+			 <div class="class-info-l">
+			 	<div class="class-cover"><img src="http://i3.c.hjfile.cn/lesson/intro/201501/284bf67a-7369-4736-8c47-9931d0eddb3d.png" alt=""></div>
+			 	<p>本课程支持: iPhone / iPad / 安卓</p>
+			 </div>
+			 <div class="class-info-r">
+			 	<div class="class-price">
+					 <p>￥1028
+					 ￥1028 5折</p>
+					<p><i class="icon-clock"></i>限时抢 88小时18分02秒</p>
+			 	</div>
+			 	<dl>
+			 		<dt>课时安排</dt>
+			 		<dd>90课时 / 2015.1.13 至 2015.8.4 </dd>
+			 	</dl>
+			 	<dl>
+			 		<dt>适合对象</dt>
+			 		<dd>初学者 零基础 <a href="">更多</a></dd>
+			 	</dl>
+			 	<dl>
+			 		<dt>课程特色</dt>
+			 		<dd>
+			 			<span class="feture-item"><i class="icon-personal"></i>私人定制</span>
+			 			<span class="feture-item"><i class="icon-personal"></i>口语精批</span>
+			 			<span class="feture-item"><i class="icon-personal"></i>专业评测</span>
+			 			<span class="feture-item"><i class="icon-personal"></i>1对1服务</span>
+			 			<span class="feture-item"><i class="icon-personal"></i>分期付款</span>
+			 			<span class="feture-item"><i class="icon-personal"></i>互动语音</span>
+			 		</dd>
+			 	</dl>
+			 </div>
 		</div>
 	</div>
 </body>
