icon sprite 处理方式修改

--- a/src/intro_v5.html
+++ b/src/intro_v5.html
@@ -2,30 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title></title>
 	<link rel="stylesheet" href="http://class2.hujiang.com/app/css/base-font-reset.css">
 	<link rel="stylesheet" href="/build/css/intro_v5.css">
+	<link rel="stylesheet" href="/build/css/font-icons.css">
+	<link rel="stylesheet" media="screen and (max-width: 320px)" href="/build/css/intro_v5_320.css">
 </head>
 <body>
-	<div class="class-header">
-		<div class="header-bg"></div>
-		<div class="class-info">
+	<div class="intro-header">
+		<div class="header-bg" style="background: url(http://i3.c.hjfile.cn/lesson/intro/201406/f9f653f3-cddb-462a-ac9d-671c1d06e5b9.png) no-repeat center;background-size: cover;"></div>
+		<div class="intro-info clearfix">
 			 <div class="page-breadcrumb">
 			 	<a href="">选课中心</a>
 			 	<a href="">英语</a>
 			 	<a href="">商务英语</a>
 			 </div>
-			 <h2 class="class-title">延世韩国语1-6册连读【3月班】</h2>
-			 <p class="class-desc">采用最新权威教材，学练结合高效掌握，零基础开启韩语学霸模式。</p>
-			 <div class="class-info-l">
-			 	<div class="class-cover"><img src="http://i3.c.hjfile.cn/lesson/intro/201501/284bf67a-7369-4736-8c47-9931d0eddb3d.png" alt=""></div>
-			 	<p>本课程支持: iPhone / iPad / 安卓</p>
+			 <h2 class="intro-title">延世韩国语1-6册连读【3月班】</h2>
+			 <p class="intro-desc">采用最新权威教材，学练结合高效掌握，零基础开启韩语学霸模式。</p>
+			 <div class="intro-info-l">
+			 	<div class="intro-cover"><img src="http://i3.c.hjfile.cn/lesson/intro/201406/f9f653f3-cddb-462a-ac9d-671c1d06e5b9.png" width="100%"></div>
+			 	<p class="support-device">本课程支持: iPhone / iPad / 安卓</p>
 			 </div>
-			 <div class="class-info-r">
-			 	<div class="class-price">
+			 <div class="intro-info-r">
+			 	<div class="intro-price">
 					 <p>￥1028
 					 ￥1028 5折</p>
-					<p><i class="icon-clock"></i>限时抢 88小时18分02秒</p>
+					<p><i class="font-icons icon-clock"></i>限时抢 88小时18分02秒</p>
 			 	</div>
 			 	<dl>
 			 		<dt>课时安排</dt>
@@ -47,6 +50,39 @@
 			 		</dd>
 			 	</dl>
 			 </div>
+		</div>
+	</div>
+	<div class="intro-nav">
+		<div class="intro-nav-con">
+			<div class="nav-list clearfix">
+				<a href="">课程详情</a>
+				<a href="">课程大纲</a>
+				<a href="" class="cur">课程咨询</a>
+				<a href="">试听课程</a>
+			</div>
+		</div>
+	</div>
+	<div class="wrapper">
+		<div class="main">
+			<div class="intro-panel">
+				<div class="panel-title">课程简介</div>
+				<div class="panel-con">
+					<img src="http://i1.t.hjfile.cn/ing_new/201503_1/ca73e920-6740-4dea-b194-6aff688b21fe_200X40.gif" alt="" /><br />
+					BEC（剑桥商务英语证书考试）是专为职场或即将进入职场的英语学习者提供的国际商务英语资格证书考试，旨在考察真实工作环境中的英语交流能力。自1993年进入中国以来，权威性和高含金量使BEC发展为中国影响力最大的职业类英语证书，已成为“职场英语”、“商务英语”的代名词。
+新版BEC中级课程，透过BEC考试把握商务英语学习的本质，在这里，你收获绝不只是语言，更是学习能力、商务沟通能力以及…
+				</div>
+			</div>
+			<div class="intro-panel" style="width: 50%;">
+				<div class="panel-title">适合对象</div>
+				<div class="panel-con">
+					
+				</div>
+			</div>
+			<div class="intro-panel" style="width: 50%;">
+				<div class="panel-title">学习目标</div>
+				<div class="panel-con">
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
