--- a/src/intro_v5.html
+++ b/src/intro_v5.html
@@ -63,25 +63,85 @@
 		</div>
 	</div>
 	<div class="wrapper">
-		<div class="main">
+		<div class="main clearfix">
 			<div class="intro-panel">
 				<div class="panel-title">课程简介</div>
 				<div class="panel-con">
-					<img src="http://i1.t.hjfile.cn/ing_new/201503_1/ca73e920-6740-4dea-b194-6aff688b21fe_200X40.gif" alt="" /><br />
+					<img src="http://i1.t.hjfile.cn/ing_new/201503_1/0e993f90-6c34-41f8-a924-d4deb58f8fdf_200X38.gif" alt="" /><br />
 					BEC（剑桥商务英语证书考试）是专为职场或即将进入职场的英语学习者提供的国际商务英语资格证书考试，旨在考察真实工作环境中的英语交流能力。自1993年进入中国以来，权威性和高含金量使BEC发展为中国影响力最大的职业类英语证书，已成为“职场英语”、“商务英语”的代名词。
 新版BEC中级课程，透过BEC考试把握商务英语学习的本质，在这里，你收获绝不只是语言，更是学习能力、商务沟通能力以及…
 				</div>
 			</div>
-			<div class="intro-panel" style="width: 50%;">
+			<div class="intro-panel intro-role-panel" style="width: 50%;">
 				<div class="panel-title">适合对象</div>
 				<div class="panel-con">
-					
+					<div class="roles-img">
+						<i class="icon-class-roles"></i>
+					</div>
+					<div class="roles-detail">
+						<div>
+							1.想要参加2015上半年及以后BEC中级考试的考生；<br />
+							2.想要提前熟悉职场和商务沟通语境的同学；<br />
+							3.想要提升就业和面试竞争力的应届毕业生；<br />
+							4.想要提升商务英语沟通能力的在职白领。
+						</div>
+						<a href="" class="btnGreen">水平自测</a>
+					</div>
 				</div>
 			</div>
-			<div class="intro-panel" style="width: 50%;">
+			<div class="intro-panel intro-role-panel" style="width: 50%;">
 				<div class="panel-title">学习目标</div>
 				<div class="panel-con">
+					<div class="roles-img">
+						<i class="icon-class-goals"></i>
+					</div>
+					<div class="roles-detail">
+						1.自如地与外籍同事或领导进行口头和书面的商务交流；<br />
+						2.熟悉并掌握BEC中级所涉及的商务词汇、概念以及各种商务场景；<br />
+						3.一次通过BEC商务英语中级考试。
+					</div>
 				</div>
+			</div>
+			<div class="intro-panel">
+				<div class="panel-title">课程安排</div>
+				<div class="panel-con">
+					<div class="class-time-panel">
+						<div class="timeline-box">
+							<p>总计200课时</p>
+						</div>
+						BEC（剑桥商务英语证书考试）是专为职场或即将进入职场的英语学习者提供的国际商务英语资格证书考试，旨在考察真实工作环境中的英语交流能力。自1993年进入中国以来，权威性和高含金量使BEC发展为中国影响力最大的职业类英语证书，已成为“职场英语”、“商务英语”的代名词。
+						新版BEC中级课程，透过BEC考试把握商务英语学习的本质，在这里，你收获绝不只是语言，更是学习能力、商务沟通能力以及…
+					</div>
+					<img src="http://i1.t.hjfile.cn/ing_new/201503_1/0e993f90-6c34-41f8-a924-d4deb58f8fdf_200X38.gif" alt="" />
+					<div class="recommond-panel">
+						<div class="recommond-title">
+							<div class="recommond-txt">根据开课时间不同，您还可以选择如下班级</div>
+						</div>
+						<table class="recommond-tbl">
+							<thead>
+								<tr>
+									<td>课程名称</td>
+									<td>开课时间</td>
+									<td>价格</td>
+									<td>选择</td>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>【新版】BEC商务英语中级【寒假通关班】</td>
+									<td>2015.01.12</td>
+									<td>2014</td>
+									<td><a href="" class="btnGreen">查看详情</a></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="intro-panel">
+				<div class="panel-title">使用教材</div>
+				<div class="panel-con">
+				</div>	
 			</div>
 		</div>
 	</div>
