兼容ie圆角问题

--- a/src/intro_v5.html
+++ b/src/intro_v5.html
@@ -64,6 +64,7 @@
 	</div>
 	<div class="wrapper">
 		<div class="main clearfix">
+			<!--课程简介-->
 			<div class="intro-panel">
 				<div class="panel-title">课程简介</div>
 				<div class="panel-con">
@@ -102,12 +103,15 @@
 					</div>
 				</div>
 			</div>
+			<!--课程安排-->
 			<div class="intro-panel">
 				<div class="panel-title">课程安排</div>
 				<div class="panel-con">
 					<div class="class-time-panel">
 						<div class="timeline-box">
-							<p>总计200课时</p>
+							<p class="timeline-total">总计<span class="green">200</span>课时</p>
+							<span class="timeline-start">开课时间<br /><span class="green">2015.3.2</span></span>
+							<span class="timeline-end">有效期至<br /><span class="green">2015.3.10</span></span>
 						</div>
 						BEC（剑桥商务英语证书考试）是专为职场或即将进入职场的英语学习者提供的国际商务英语资格证书考试，旨在考察真实工作环境中的英语交流能力。自1993年进入中国以来，权威性和高含金量使BEC发展为中国影响力最大的职业类英语证书，已成为“职场英语”、“商务英语”的代名词。
 						新版BEC中级课程，透过BEC考试把握商务英语学习的本质，在这里，你收获绝不只是语言，更是学习能力、商务沟通能力以及…
@@ -120,26 +124,68 @@
 						<table class="recommond-tbl">
 							<thead>
 								<tr>
-									<td>课程名称</td>
-									<td>开课时间</td>
-									<td>价格</td>
-									<td>选择</td>
+									<td width="40%">课程名称</td>
+									<td align="center" width="20%">开课时间</td>
+									<td align="center" width="20%">价格</td>
+									<td align="center" width="20%">选择</td>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
 									<td>【新版】BEC商务英语中级【寒假通关班】</td>
-									<td>2015.01.12</td>
-									<td>2014</td>
-									<td><a href="" class="btnGreen">查看详情</a></td>
+									<td align="center">2015.01.12</td>
+									<td align="center" class="orange">2014</td>
+									<td align="center"><a href="" class="btnGreen">查看详情</a></td>
+								</tr>
+								<tr>
+									<td>【新版】BEC商务英语中级【寒假通关班】</td>
+									<td align="center">2015.01.12</td>
+									<td align="center" class="orange">2014</td>
+									<td align="center"><a href="" class="btnGreen">查看详情</a></td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
 				</div>
 			</div>
+			<!--师资介绍-->
 			<div class="intro-panel">
+				<div class="panel-title">师资介绍</div>
+				<div class="panel-con">
+				</div>	
+			</div>
+			<!--使用教材-->
+			<div class="intro-panel material-panel">
 				<div class="panel-title">使用教材</div>
+				<div class="panel-con">
+					<div class="material-covers">
+						<img src="http://i1.t.hjfile.cn/ing_new/201503_1/f0c257aa-fb0c-495a-97b7-9f019944e364_70X100.gif" alt="" />
+						<img src="http://i1.t.hjfile.cn/ing_new/201503_1/f0c257aa-fb0c-495a-97b7-9f019944e364_70X100.gif" alt="" />
+					</div>
+					<div class="material-list">
+						1.考研英语讲义-精编绝密版、考研英语（一）真题集<br />
+						2.剑桥BEC真题集 第4辑》（中级）<br />
+						3.A1-B1部分：《走遍法国1/上》学生用书+《走遍法国1/下》学生用书 +《走遍法国2》学生用书
+						<p class="orange">报名本班即可获赠全套经典教材，无需额外购买！</p>
+					</div>
+				</div>	
+			</div>
+			<!--学员风采-->
+			<div class="intro-panel">
+				<div class="panel-title">学员风采</div>
+				<div class="panel-con">
+					<img src="http://i1.t.hjfile.cn/ing_new/201503_1/0e993f90-6c34-41f8-a924-d4deb58f8fdf_200X38.gif" alt="" />
+				</div>	
+			</div>
+			<!--学员心声-->
+			<div class="intro-panel">
+				<div class="panel-title">学员心声</div>
+				<div class="panel-con">
+				</div>	
+			</div>
+			<!--课程咨询-->
+			<div class="intro-panel">
+				<div class="panel-title">课程咨询</div>
 				<div class="panel-con">
 				</div>	
 			</div>
