intro页 课程咨询 课程大纲 浏览器兼容 代码优化

--- a/src/schedule.html
+++ b/src/schedule.html
@@ -34,7 +34,7 @@
                     </li>
                     <li>
                         <div class="class-icon"></div>
-                        <span>01-出口成章</span>
+                        01-出口成章
                     </li>
                 </ul>
             </div>
@@ -48,11 +48,11 @@
                 <ul class="item-content">
                     <li>
                         <div class="class-icon"></div>
-                        <span>00-出口成章</span>
+                        00-出口成章
                     </li>
                     <li>
                         <div class="class-icon"></div>
-                        <span>01-出口成章</span>
+                        01-出口成章
                     </li>
                     
                 </ul>
@@ -67,11 +67,11 @@
                 <ul class="item-content">
                     <li>
                         <div class="class-icon"></div>
-                        <span>00-出口成章</span>
+                        00-出口成章
                     </li>
                     <li>
                         <div class="class-icon"></div>
-                        <span>01-出口成章</span>
+                        01-出口成章
                     </li>
                     
                 </ul>
